# cookiecutter-python-uv-boilerplate

./: .envrc  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: job-test.yml
{{cookiecutter.project_slug}}/: .envrc  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: job-pre-commit.yml
